@@ -5,6 +5,7 @@ import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
 import org.bukkit.Material;
 import org.bukkit.NamespacedKey;
+import org.bukkit.configuration.ConfigurationSection;
 import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.enchantments.Enchantment;
 import org.bukkit.entity.Player;
@@ -17,9 +18,9 @@ import org.bukkit.persistence.PersistentDataType;
 import org.bukkit.profile.PlayerProfile;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
-import java.util.Objects;
+import java.util.List;
 import java.util.UUID;
 
 public class ItemStackManager {
@@ -30,88 +31,121 @@ public class ItemStackManager {
         this.plugin = plugin;
     }
 
-    public void setupGUI(final Inventory inventory, final FileConfiguration file, final Player player) {
-        for (String key : Objects.requireNonNull(file.getConfigurationSection("")).getKeys(false)) {
-            if (!key.equalsIgnoreCase("settings")) {
-                ItemStack itemStack;
-                if (!file.contains(key + ".HEAD")) {
-                    if (!file.contains(key + ".MODEL-DATA")) {
-                        final String material = file.getString(key + ".MATERIAL");
-                        itemStack = getItemStack(material, file.getInt(key + ".AMOUNT"));
-                        if (itemStack == null) {
-                            plugin.getTextUtils().gui(player, "gui", material);
-                            return;
-                        }
-                    } else {
-                        itemStack = new ItemStack(Material.STICK);
-                        final ItemMeta itemMeta = itemStack.getItemMeta();
-                        if (itemMeta != null) {
-                            itemMeta.setCustomModelData(file.getInt(key + ".MODEL-DATA"));
-                            itemStack.setItemMeta(itemMeta);
-                        }
-                    }
-                } else {
-                    final String material = file.getString(key + ".HEAD");
-                    itemStack = plugin.drone_heads.get(material);
-                    if (itemStack == null) {
-                        plugin.getTextUtils().gui(player, "head", material);
-                        return;
-                    }
-                }
-                final ItemMeta itemMeta = itemStack.getItemMeta();
-                if (itemMeta == null) {
-                    return;
-                }
-                itemMeta.setDisplayName(plugin.getPlaceholderManager().replacePlaceholders(player, ChatColor.translateAlternateColorCodes('&',
-                        Objects.requireNonNull(file.getString(key + ".NAME")))));
-                final ArrayList<String> list = new ArrayList<>();
-                for (String lores : file.getStringList(key + ".LORES")) {
-                    list.add(plugin.getPlaceholderManager().replacePlaceholders(player, ChatColor.translateAlternateColorCodes('&', lores)));
-                }
-                itemMeta.setLore(list);
-                if (file.contains(key + ".CATEGORY")) {
-                    final NamespacedKey nameKey = new NamespacedKey(plugin, "drone");
-                    itemMeta.getPersistentDataContainer().set(nameKey, PersistentDataType.STRING, file.getString(key + ".CATEGORY"));
-                }
-                itemStack.setItemMeta(itemMeta);
-                glow(itemStack, file, key + ".OPTIONS");
-                inventory.setItem(Integer.parseInt(key), itemStack);
-            }
-        }
-    }
+    public void setupGUI(Inventory inventory, FileConfiguration file, Player player) {
+        ConfigurationSection rootSection = file.getConfigurationSection("");
+        if (rootSection == null) return;
 
-    public ItemStack getItemStack(final String bb, final int amount) {
-        try {
-            return new ItemStack(Material.getMaterial(bb), amount);
-        } catch (Exception e) {
-            return null;
-        }
-    }
+        for (String key : rootSection.getKeys(false)) {
+            if (key.equalsIgnoreCase("settings")) continue;
 
-    public void dispatchCommand(final FileConfiguration file, final int slot, final Player player) {
-        if (file.contains(slot + ".COMMANDS")) {
-            if (player.hasPermission(Objects.requireNonNull(file.getString(slot + ".COMMANDS.PERMISSION")))) {
-                if (file.contains(slot + ".COMMANDS.CONSOLE")) {
-                    for (String command : file.getStringList(slot + ".COMMANDS.CONSOLE")) {
-                        plugin.getServer().dispatchCommand(plugin.consoleSender, command.replace("{player}", player.getName()));
-                    }
+            ItemStack itemStack;
+
+            if (file.contains(key + ".HEAD")) {
+                String headKey = file.getString(key + ".HEAD");
+                itemStack = plugin.drone_heads.get(headKey);
+                if (itemStack == null) {
+                    plugin.getTextUtils().gui(player, "head", headKey);
+                    continue;
                 }
-                if (file.contains(slot + ".COMMANDS.PLAYER")) {
-                    for (String command : file.getStringList(slot + ".COMMANDS.PLAYER")) {
-                        player.performCommand(command.replace("{player}", player.getName()));
-                    }
+            } else if (file.contains(key + ".MODEL-DATA")) {
+                itemStack = new ItemStack(Material.STICK);
+                ItemMeta itemMeta = itemStack.getItemMeta();
+                if (itemMeta != null) {
+                    itemMeta.setCustomModelData(file.getInt(key + ".MODEL-DATA"));
+                    itemStack.setItemMeta(itemMeta);
                 }
             } else {
-                if (file.contains(slot + ".COMMANDS.NO-PERMISSION")) {
-                    for (String command : file.getStringList(slot + ".COMMANDS.NO-PERMISSION")) {
-                        plugin.getServer().dispatchCommand(plugin.consoleSender, command.replace("{player}", player.getName()));
-                    }
+                String material = file.getString(key + ".MATERIAL");
+                itemStack = getItemStack(material, file.getInt(key + ".AMOUNT"));
+                if (itemStack == null) {
+                    plugin.getTextUtils().gui(player, "gui", material);
+                    continue;
                 }
+            }
+
+            ItemMeta itemMeta = itemStack.getItemMeta();
+            if (itemMeta == null) continue;
+
+            String rawName = file.getString(key + ".NAME");
+            if (rawName != null) {
+                String displayName = ChatColor.translateAlternateColorCodes('&',
+                        plugin.getPlaceholderManager().replacePlaceholders(player, rawName));
+                itemMeta.setDisplayName(displayName);
+            }
+
+            List<String> loreList = new ArrayList<>();
+            List<String> loreConfigList = file.getStringList(key + ".LORES");
+            for (String lore : loreConfigList) {
+                loreList.add(ChatColor.translateAlternateColorCodes('&',
+                        plugin.getPlaceholderManager().replacePlaceholders(player, lore)));
+            }
+            itemMeta.setLore(loreList);
+
+            String category = file.getString(key + ".CATEGORY");
+            if (category != null) {
+                NamespacedKey nameKey = new NamespacedKey(plugin, "drone");
+                itemMeta.getPersistentDataContainer().set(nameKey,
+                        PersistentDataType.STRING, category);
+            }
+
+            itemStack.setItemMeta(itemMeta);
+
+            addGlow(itemStack, file, key + ".OPTIONS");
+
+            try {
+                inventory.setItem(Integer.parseInt(key), itemStack);
+            } catch (NumberFormatException e) {
+                plugin.getTextUtils().warning("Invalid inventory slot key: " + key);
             }
         }
     }
 
-    public ItemStack getHeadTexture(final String texture) {
+    public ItemStack getItemStack(String material, int amount) {
+        Material returnMaterial = Material.matchMaterial(material);
+        if (returnMaterial == null) {
+            return null;
+        }
+        return new ItemStack(returnMaterial, amount);
+    }
+
+    public void dispatchCommand(FileConfiguration file, int slot, Player player) {
+        String basePath = slot + ".COMMANDS";
+
+        if (!file.contains(basePath)) return;
+
+        String permission = file.getString(basePath + ".PERMISSION");
+        if (permission == null || permission.trim().isEmpty()) {
+            plugin.getTextUtils().warning("Missing permission node for slot " + slot);
+            return;
+        }
+
+        permission = permission.trim();
+
+        boolean hasPerm = player.hasPermission(permission);
+
+        if (hasPerm) {
+
+            List<String> consoleCommands = file.getStringList(basePath + ".CONSOLE");
+            for (String command : consoleCommands) {
+                plugin.getServer().dispatchCommand(plugin.consoleSender,
+                        command.replace("{player}", player.getName()));
+            }
+
+            List<String> playerCommands = file.getStringList(basePath + ".PLAYER");
+            for (String command : playerCommands) {
+                player.performCommand(command.replace("{player}", player.getName()));
+            }
+
+        } else {
+            List<String> noPermCommands = file.getStringList(basePath + ".NO-PERMISSION");
+            for (String command : noPermCommands) {
+                plugin.getServer().dispatchCommand(plugin.consoleSender,
+                        command.replace("{player}", player.getName()));
+            }
+        }
+    }
+
+    public ItemStack getHeadTexture(String texture) {
         ItemStack head = new ItemStack(Material.PLAYER_HEAD);
         SkullMeta meta = (SkullMeta) head.getItemMeta();
 
@@ -120,25 +154,33 @@ public class ItemStackManager {
         PlayerProfile profile = Bukkit.createPlayerProfile(UUID.randomUUID());
 
         try {
-            profile.getTextures().setSkin(new URL(texture));
+            profile.getTextures().setSkin(URI.create(texture).toURL());
         } catch (MalformedURLException e) {
-
             return head;
         }
+
         meta.setOwnerProfile(profile);
         head.setItemMeta(meta);
         return head;
     }
 
-    public void glow(final ItemStack itemStack, final FileConfiguration file, final String path) {
-        if (file.contains(path) && file.getStringList(path).contains("GLOW")) {
+    public boolean addGlow(ItemStack itemStack, FileConfiguration file, String path) {
+        if (itemStack == null || file == null || path == null) {
+            return false;
+        }
+
+        List<String> effects = file.getStringList(path);
+        if (effects.stream().anyMatch(s -> s.equalsIgnoreCase("GLOW"))) {
             itemStack.addUnsafeEnchantment(Enchantment.INFINITY, 0);
             ItemMeta itemMeta = itemStack.getItemMeta();
-            if (itemMeta == null) {
-                return;
+            if (itemMeta != null) {
+                itemMeta.addItemFlags(ItemFlag.HIDE_ENCHANTS);
+                itemStack.setItemMeta(itemMeta);
             }
-            itemMeta.addItemFlags(ItemFlag.HIDE_ENCHANTS);
-            itemStack.setItemMeta(itemMeta);
+            return true;
         }
+
+        return false;
     }
+
 }
